--- a/textproc/ruby-rdtool/Makefile
+++ b/textproc/ruby-rdtool/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/03/06 17:19:07 taca Exp $
+# $NetBSD: Makefile,v 1.15 2005/03/24 21:13:02 wiz Exp $
 
 DISTNAME=	rdtool-0.6.14
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
@@ -16,6 +16,7 @@ CONFLICTS+=	ruby[1-9][0-9]-rdtool-*
 
 REPLACE_RUBY=	rd2 rmi2html.rb utils/rdswap.rb
 INSTALL_TARGET=	install install-rmi2html
+USE_RUBY_DIST_SUBDIR=	yes
 
 .include "../../lang/ruby/rubyversion.mk"
 
