--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.311 2005/10/20 17:46:47 wiz Exp $
+# $NetBSD: Makefile,v 1.312 2005/10/21 04:02:38 minskim Exp $
 #
 
 COMMENT=	System utilities
@@ -19,6 +19,7 @@ SUBDIR+=	aperture
 SUBDIR+=	asapm
 SUBDIR+=	atitvout
 SUBDIR+=	bacula
+SUBDIR+=	bacula-doc
 SUBDIR+=	bbsload
 SUBDIR+=	bchunk
 SUBDIR+=	bkpupsd
