--- a/databases/postgresql80/Makefile
+++ b/databases/postgresql80/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2005/08/05 19:43:44 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/10/23 20:16:52 jlam Exp $
 
 PKGNAME=	postgresql80-${BASE_VERS}
 COMMENT=	Robust, next generation, object-relational DBMS
 
-DEPENDS+=	postgresql80-client>=${BASE_VERS}nb2:../../databases/postgresql80-client
-DEPENDS+=	postgresql80-server>=${BASE_VERS}nb2:../../databases/postgresql80-server
+DEPENDS+=	postgresql80-client>=${BASE_VERS}:../../databases/postgresql80-client
+DEPENDS+=	postgresql80-server>=${BASE_VERS}:../../databases/postgresql80-server
 
 .include "Makefile.common"
 
