--- a/www/p5-HTML-TableExtract/Makefile
+++ b/www/p5-HTML-TableExtract/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2005/07/13 18:01:47 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2005/08/06 06:19:39 jlam Exp $
 
-DISTNAME=		HTML-TableExtract-1.10
+DISTNAME=		HTML-TableExtract-2.06
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		www perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=HTML/}
 
@@ -11,6 +10,8 @@ HOMEPAGE=		http://sourceforge.net/projects/table-extract/
 COMMENT=		Perl5 module to simplify extracting HTML tables
 
 DEPENDS+=		p5-HTML-Parser>=3.08:../../www/p5-HTML-Parser
+DEPENDS+=		p5-HTML-Tree>=3.18:../../www/p5-HTML-Tree
+DEPENDS+=		p5-HTML-Element-Extended>=1.13:../../www/p5-HTML-Element-Extended
 
 PERL5_PACKLIST=		auto/HTML-TableExtract/.packlist
 
