--- a/www/squid/Makefile
+++ b/www/squid/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.161 2005/10/09 14:47:55 taca Exp $
+# $NetBSD: Makefile,v 1.162 2005/10/23 22:32:32 taca Exp $
 
 DISTNAME=	squid-2.5.STABLE12
 PKGNAME=	squid-2.5.12
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://www.squid-cache.org/Versions/v2/2.5/ \
 		ftp://ftp.leo.org/pub/comp/general/infosys/www/daemons/squid/squid-2/STABLE/ \
