--- a/security/py-amkCrypto/Makefile
+++ b/security/py-amkCrypto/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2004/10/03 00:18:12 tv Exp $
+# $NetBSD: Makefile,v 1.17 2005/04/11 21:47:18 tv Exp $
 #
 
-DISTNAME=	pycrypto-1.9a6
-PKGNAME=	${PYPKGPREFIX}-amkCrypto-1.9a6
-PKGREVISION=	3
+DISTNAME=	pycrypto-2.0.1
+PKGNAME=	${PYPKGPREFIX}-amkCrypto-2.0.1
 CATEGORIES=	security python
 MASTER_SITES=	http://www.amk.ca/files/python/crypto/
 
