--- a/security/seahorse/Makefile
+++ b/security/seahorse/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.40 2005/08/10 20:56:23 jlam Exp $
+# $NetBSD: Makefile,v 1.41 2005/08/12 19:41:16 drochner Exp $
 
-DISTNAME=	seahorse-0.7.9
+DISTNAME=	seahorse-0.8
 CATEGORIES=	security
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/seahorse/0.7/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/seahorse/0.8/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
