--- a/shells/zsh/Makefile.common
+++ b/shells/zsh/Makefile.common
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile.common,v 1.27 2005/10/11 12:43:00 joerg Exp $
+# $NetBSD: Makefile.common,v 1.28 2005/10/23 15:36:48 rillig Exp $
 
 DISTNAME=       zsh-${ZSH_VERSION}
 CATEGORIES=	shells
 MASTER_SITES=   ftp://sunsite.dk/pub/unix/shells/zsh/ \
 		ftp://ftp.fu-berlin.de/pub/unix/shells/zsh/ \
-		ftp://ftp.lysator.liu.se/pub/unix/zsh/ \
 		ftp://ftp.funet.fi/pub/unix/shells/zsh/ \
 		http://www.math.technion.ac.il/pub/zsh/ \
 		ftp://ftp.zsh.org/zsh/
