--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.312 2005/10/21 04:02:38 minskim Exp $
+# $NetBSD: Makefile,v 1.313 2005/10/25 04:24:01 minskim Exp $
 #
 
 COMMENT=	System utilities
@@ -234,6 +234,7 @@ SUBDIR+=	xfce4-diskperf-plugin
 SUBDIR+=	xfce4-fm
 SUBDIR+=	xfce4-minicmd-plugin
 SUBDIR+=	xfce4-netload-plugin
+SUBDIR+=	xfce4-quicklauncher-plugin
 SUBDIR+=	xfce4-showdesktop-plugin
 SUBDIR+=	xfce4-systemload-plugin
 SUBDIR+=	xfce4-systray
