--- a/devel/bugzilla/files/bugzilla.conf
+++ b/devel/bugzilla/files/bugzilla.conf
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: bugzilla.conf,v 1.1.1.1 2005/01/02 13:39:55 adrianp Exp $
 #
 # Bugzilla configuration file fragment for Apache
 
@@ -8,7 +8,7 @@
 
 <Directory "@BZDIR@">
     AddHandler cgi-script .cgi
-    Options +ExecCGI +FollowSymLinks
+    Options +ExecCGI
     AllowOverride Limit
     Order allow,deny
     Allow from all
