--- a/security/heimdal/Makefile
+++ b/security/heimdal/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.44 2005/10/25 01:17:57 rillig Exp $
+# $NetBSD: Makefile,v 1.45 2005/10/26 15:12:45 jlam Exp $
 
 DISTNAME=	heimdal-0.7.1
+PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.pdc.kth.se/pub/heimdal/src/	\
 		ftp://ftp.sunet.se/pub/unix/admin/mirror-pdc/heimdal/src/
