--- a/misc/openoffice2-bin/Makefile
+++ b/misc/openoffice2-bin/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2005/10/23 14:38:30 mrauch Exp $
+# $NetBSD: Makefile,v 1.7 2005/10/26 11:56:12 tv Exp $
 
 PKGNAME=		openoffice-bin-2.0.0
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		misc
 MASTER_SITES=		${MASTER_SITE_OPENOFFICE:=stable/2.0.0/}
 DISTFILES=		${DISTNAME}${EXTRACT_SUFX}
