--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.414 2005/10/15 18:54:24 minskim Exp $
+# $NetBSD: Makefile,v 1.415 2005/10/28 02:48:12 minskim Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -155,6 +155,7 @@ SUBDIR+=	mowitz
 SUBDIR+=	mrxvt
 SUBDIR+=	multi-aterm
 SUBDIR+=	multi-gnome-terminal
+SUBDIR+=	mxterm
 SUBDIR+=	neXtaw
 SUBDIR+=	numlockx
 SUBDIR+=	ocaml-graphics
