--- a/x11/xfce4-notes-plugin/Makefile
+++ b/x11/xfce4-notes-plugin/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2004/10/03 00:18:39 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/23 07:27:10 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-XFCE4_VERSION=	0.10.0
+XFCE4_VERSION=	0.11.1
 
 DISTNAME=	xfce4-notes-plugin-${XFCE4_VERSION}
 CATEGORIES=	sysutils
