--- a/print/xpdf-hebrew/Makefile
+++ b/print/xpdf-hebrew/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2004/07/28 11:06:43 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2005/10/12 11:08:19 wiz Exp $
 #
 
 DISTNAME=	xpdf-hebrew-2003-feb-16
-PKGNAME=	${DISTNAME}-20030216
+PKGNAME=	xpdf-hebrew-20030216
 CATEGORIES=	print
 MASTER_SITES=	ftp://ftp.foolabs.com/pub/xpdf/ \
 		http://gd.tuwien.ac.at/publishing/xpdf/
