--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.580 2005/10/18 04:47:06 minskim Exp $
+# $NetBSD: Makefile,v 1.581 2005/10/26 03:45:47 minskim Exp $
 #
 
 COMMENT=	Networking tools
@@ -23,6 +23,7 @@ SUBDIR+=	arping
 SUBDIR+=	arpwatch
 SUBDIR+=	autonet
 SUBDIR+=	awhois
+SUBDIR+=	balance
 SUBDIR+=	batchftp
 SUBDIR+=	bftpd
 SUBDIR+=	bind4
