--- a/databases/luma/Makefile
+++ b/databases/luma/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2005/08/08 09:53:45 drochner Exp $
+# $NetBSD: Makefile,v 1.3 2005/09/08 18:29:56 drochner Exp $
 #
 
 DISTNAME=		luma-2.2.1
@@ -21,6 +21,7 @@ do-build:
 
 do-install:
 	(cd ${WRKSRC} && ${PYTHONBIN} install.py --prefix=${PREFIX})
+	${RM} -f ${PREFIX}/bin/luma.orig
 
 .include "../../lang/python/application.mk"
 .include "../../databases/py-ldap/buildlink3.mk"
