--- a/sysutils/vcdimager-devel/Makefile
+++ b/sysutils/vcdimager-devel/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.28 2005/07/21 16:29:58 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2005/08/10 20:56:24 jlam Exp $
 #
 
 DISTNAME=	vcdimager-0.7.22
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://www.vcdimager.org/pub/vcdimager/vcdimager-0.7/
 
@@ -20,6 +21,8 @@ PKGCONFIG_OVERRIDE+= libvcdinfo.pc.in
 .if ${OPSYS} == "SunOS"
 BUILDLINK_TRANSFORM+= rm:-Wl,--version-script=libvcdinfo.la.ver
 .endif
+
+BUILDLINK_DEPENDS.libcdio+=	libcdio>=0.72
 
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/popt/buildlink3.mk"
