--- a/sysutils/iwi-firmware/Makefile
+++ b/sysutils/iwi-firmware/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2005/06/09 07:30:03 skrll Exp $
+# $NetBSD: Makefile,v 1.4 2005/10/03 16:45:08 skrll Exp $
 #
 
 DISTNAME=		ipw2200-fw-2.3
@@ -15,7 +15,7 @@ COMMENT=		Firmware binary images for iwi(4) driver
 LICENSE=		intel-ipw-license
 
 
-ONLY_FOR_PLATFORM=	NetBSD-*-i386
+ONLY_FOR_PLATFORM=	NetBSD-*-*
 
 RESTRICTED=		"Intel Licensed Software: see http://ipw2200.sourceforge.net/firmware.php?fid=5"
 NO_SRC_ON_CDROM=	${RESTRICTED}
