--- a/graphics/ruby-gd/Makefile
+++ b/graphics/ruby-gd/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/03/06 17:19:06 taca Exp $
+# $NetBSD: Makefile,v 1.12 2005/04/11 21:46:09 tv Exp $
 
 DISTNAME=	ruby-GD-${VER}-1
 PKGNAME=	${RUBY_PKGPREFIX}-gd-${VER}.1
@@ -6,7 +6,7 @@ PKGREVISION=	2
 CATEGORIES=	graphics ruby
 MASTER_SITES=	http://tam.0xfa.com/ruby-gd/
 
-MAINTAINER=	rasputin@idoru.mine.nu
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	# not available
 COMMENT=	Ruby extension to drive the GD library
 
