--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.395 2005/10/21 17:36:10 drochner Exp $
+# $NetBSD: Makefile,v 1.396 2005/10/27 07:56:02 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -275,6 +275,7 @@ SUBDIR+=	vcg
 SUBDIR+=	veusz
 SUBDIR+=	vid
 SUBDIR+=	viewfax
+SUBDIR+=	vnc2swf
 SUBDIR+=	vp
 SUBDIR+=	vtk
 SUBDIR+=	vtk-data
