--- a/www/clearsilver/Makefile.common
+++ b/www/clearsilver/Makefile.common
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.common,v 1.5 2005/05/22 20:08:44 jlam Exp $
+# $NetBSD: Makefile.common,v 1.6 2005/10/17 04:15:23 taca Exp $
 
-DISTNAME=		clearsilver-0.9.14
+DISTNAME=		clearsilver-0.10.1
 CLEARSILVER_BASE=       ${DISTNAME:S/-/-base-/}
 CATEGORIES=		www
 MASTER_SITES=		http://www.clearsilver.net/downloads/
