--- a/devel/swig-build/Makefile.common
+++ b/devel/swig-build/Makefile.common
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile.common,v 1.8 2004/12/03 15:14:55 wiz Exp $
+# $NetBSD: Makefile.common,v 1.9 2005/04/11 21:45:39 tv Exp $
 
 DISTNAME=       swig-${SWIG_VERSION}
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=swig/}
 
-MAINTAINER=	epg@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.swig.org/
 
 .include "../../devel/swig-build/Makefile.version"
