--- a/wm/fvwm-devel/Makefile
+++ b/wm/fvwm-devel/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2005/04/11 21:47:47 tv Exp $
+# $NetBSD: Makefile,v 1.8 2005/06/01 18:03:25 jlam Exp $
 
-DISTNAME=	fvwm-2.5.12
+DISTNAME=	fvwm-2.5.14
 PKGNAME=	${DISTNAME:S/fvwm/&-devel/}
-PKGREVISION=	1
 CATEGORIES=	x11 wm
 MASTER_SITES=	ftp://ftp.fvwm.org/pub/fvwm/version-2/
 EXTRACT_SUFX=	.tar.bz2
