--- a/audio/festival/Makefile
+++ b/audio/festival/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.43 2005/06/16 23:34:44 kristerw Exp $
+# $NetBSD: Makefile,v 1.44 2005/09/29 19:35:50 kristerw Exp $
 
 DISTNAME=	festival-1.95-beta
 PKGNAME=	festival-1.95beta
@@ -74,7 +74,7 @@ post-patch:
 .endif
 
 do-configure:
-	cd ${SPEECHTOOLS} && ${ENV} ${CONFIGURE_ENV} ./configure ${CONFIGURE_ARGS}
+	cd ${SPEECHTOOLS} && ${SETENV} ${CONFIGURE_ENV} ./configure ${CONFIGURE_ARGS}
 
 do-install:
 	${INSTALL_DATA_DIR} ${FHOME}
