--- a/emulators/fceu/Makefile
+++ b/emulators/fceu/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.6 2005/03/27 15:43:33 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2005/04/11 21:45:43 tv Exp $
 #
 
-DISTNAME=		fceu-0.98.12.src
+DISTNAME=		fceu-0.98.13.src
 PKGNAME=		${DISTNAME:S/.src//}
-PKGREVISION=		1
 CATEGORIES=		emulators
-MASTER_SITES=		http://fceultra.sourceforge.net/releases/
+MASTER_SITES=		http://pdaxrom.theinternet.nl/fceu/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		wiz@NetBSD.org
-HOMEPAGE=		http://fceultra.sourceforge.net/
+HOMEPAGE=		http://pdaxrom.theinternet.nl/fceu/
 COMMENT=		Portable NES and Famicom emulator
 
 WRKSRC=			${WRKDIR}/fceu
