--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.315 2005/10/28 06:43:13 martti Exp $
+# $NetBSD: Makefile,v 1.316 2005/10/29 16:09:03 minskim Exp $
 #
 
 COMMENT=	System utilities
@@ -20,6 +20,7 @@ SUBDIR+=	aperture
 SUBDIR+=	asapm
 SUBDIR+=	atitvout
 SUBDIR+=	bacula
+SUBDIR+=	bacula-client
 SUBDIR+=	bacula-doc
 SUBDIR+=	bbsload
 SUBDIR+=	bchunk
