--- a/audio/amp/Makefile
+++ b/audio/amp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2004/05/31 16:47:47 minskim Exp $
+# $NetBSD: Makefile,v 1.18 2005/04/11 21:44:51 tv Exp $
 #
 
 DISTNAME=	amp-0.7.6
@@ -13,6 +13,8 @@ COMMENT=	Another mp3 player
 
 NO_SRC_ON_FTP=	Already in MASTER_SITE_LOCAL
 
+NOT_FOR_PLATFORM=	Interix-*-*
+
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 GNU_CONFIGURE=	yes
@@ -20,7 +22,7 @@ GNU_CONFIGURE=	yes
 INSTALLATION_DIRS=	bin man/man1
 
 do-install:
-	@ ${INSTALL_PROGRAM} ${WRKSRC}/amp ${PREFIX}/bin
-	@ ${INSTALL_MAN} ${WRKSRC}/amp.1 ${PREFIX}/man/man1
+	${INSTALL_PROGRAM} ${WRKSRC}/amp ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/amp.1 ${PREFIX}/man/man1
 
 .include "../../mk/bsd.pkg.mk"
