--- a/audio/mixer.app/Makefile
+++ b/audio/mixer.app/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/04/11 21:44:55 tv Exp $
+# $NetBSD: Makefile,v 1.9 2005/06/01 18:02:38 jlam Exp $
 #
 
 DISTNAME=	Mixer.app-1.8.0
@@ -10,6 +10,8 @@ MASTER_SITES=	http://www.fukt.bth.se/~per/mixer/
 MAINTAINER=	ptiJo@noos.fr
 HOMEPAGE=	http://www.fukt.bth.se/~per/mixer/
 COMMENT=	Another mixer intended for the windowmaker dockapp
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
