--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.683 2005/10/29 02:03:33 minskim Exp $
+# $NetBSD: Makefile,v 1.684 2005/10/30 21:04:13 agc Exp $
 #
 
 COMMENT=	Development utilities
@@ -603,6 +603,7 @@ SUBDIR+=	swig-perl
 SUBDIR+=	swig-python
 SUBDIR+=	swig13
 SUBDIR+=	syncdir
+SUBDIR+=	sysexits
 SUBDIR+=	tavrasm
 SUBDIR+=	tcl-tclcl
 SUBDIR+=	tcllib
