--- a/audio/nspmod/Makefile
+++ b/audio/nspmod/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2004/10/28 13:40:52 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2005/02/23 03:28:49 minskim Exp $
 #
 
 DISTNAME=	nspmod-0.1
@@ -8,6 +8,8 @@ MASTER_SITES=	${MASTER_SITE_SUNSITE:=apps/sound/players/}
 MAINTAINER=	mycroft@NetBSD.ORG
 #HOMEPAGE=	http://www.jeton.or.jp/users/toru/www/orgsoft/index.html
 COMMENT=	MOD/S3M/MTM tracker that does its own DSP, uses VoxWare v2.90+
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
