--- a/audio/portaudio/Makefile
+++ b/audio/portaudio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/07/27 16:21:16 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2005/10/10 15:24:08 joerg Exp $
 
 DISTNAME=	portaudio_v18_1
 PKGNAME=	portaudio-18.1
@@ -10,6 +10,8 @@ EXTRACT_SUFX=	.zip
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.portaudio.com/
 COMMENT=	Portable cross-platform Audio API
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 USE_TOOLS+=		gmake
 USE_LIBTOOL=		yes
