--- a/audio/rio500/Makefile
+++ b/audio/rio500/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2005/04/11 21:44:56 tv Exp $
+# $NetBSD: Makefile,v 1.16 2005/05/22 20:07:39 jlam Exp $
 #
 
 DISTNAME=	rio500-0.7
@@ -9,6 +9,8 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=rio500/}
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://rio500.sourceforge.net/
 COMMENT=	Utilities to manage your Diamond Rio 500 MP3 player
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 USE_TOOLS+=	gmake
 
