--- a/audio/xcdplayer/Makefile
+++ b/audio/xcdplayer/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2003/07/17 21:23:47 grant Exp $
+# $NetBSD: Makefile,v 1.14 2005/03/24 21:12:51 wiz Exp $
 
 DISTNAME=       xcdplayer-2.2
 PKGREVISION=	1
@@ -9,6 +9,8 @@ EXTRACT_SUFX=	.tar.Z
 
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	CD player for X
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 USE_IMAKE=	yes
 
